--- a/corecal/build.gradle
+++ b/corecal/build.gradle
@@ -39,6 +39,10 @@ application {
     mainClass = 'edu.curtin.sec.assignment2.App'
 }
 
+run {
+    standardInput = System.in
+}
+
 pmd {
     consoleOutput = true
     toolVersion = '6.55.0'
