--- a/corecal/src/main/resources/bundle.properties
+++ b/corecal/src/main/resources/bundle.properties
@@ -1,2 +1,3 @@
 menu-prompt = Enter an option (+d, +w, +m, +y, -d, -w, -m, -y, t, search, quit, locale or help):
 locale-menu-prompt = Enter Your Desired Locale [en-AU, si-LK, de-DE or default] (default will use english for UI text)
+no-rows = "                           No Events Available"
