added new stuff to default bundle

--- a/corecal/src/main/resources/bundle.properties
+++ b/corecal/src/main/resources/bundle.properties
@@ -1,3 +1,7 @@
 menu-prompt = Enter an option (+d, +w, +m, +y, -d, -w, -m, -y, t, search, quit, locale or help):
+invalid-option = \u001B[31mInvalid option. Please enter a valid option.\u001B[0m
 locale-menu-prompt = Enter Your Desired Locale [en-AU, si-LK, de-DE or default] (default will use english for UI text)
-no-rows = "                           No Events Available"
+invalid-locale = \u001B[31mInput is not in the correct format or does not have an uppercase country code.\u001B[0m
+exit-program = Exiting program.
+
+no-rows =                            No Events Available
