--- a/corecal/src/main/resources/bundle.properties
+++ b/corecal/src/main/resources/bundle.properties
@@ -2,7 +2,13 @@ menu-prompt = Enter an option (+d, +w, +m, +y, -d, -w, -m, -y, t, search, quit, 
 
 invalid-option = \u001B[31mInvalid option. Please enter a valid option.\u001B[0m
 
+usage = \"+d\" to go forward (later) 1 day;\n\"+w\" to go forward 1 week;\n\"+m\" to go forward 1 month;\n\"+y\" to go forward 1 year;\n\"-d\" to go back (earlier) 1 day;\n\"-w\" to go back 1 week;\n\"-m\" to go back 1 month;\n\"-y\" to go back 1 year;\n\"t\" to return to today.\n\"search\" to search for events.\n\"quit\" to exit the program.
+
 locale-menu-prompt = Enter Your Desired Locale [en-AU, si-LK, de-DE or default] (default will use english for UI text)
+
+selected-germany = "\nSelected German (Germany) Locale"
+
+selected-locale = "\nChanged to Given Locale"
 
 invalid-locale = \u001B[31mInput is not in the correct format or does not have an uppercase country code.\u001B[0m
 
