notify plugin implementation ok no proper printing

--- a/corecal/build.gradle
+++ b/corecal/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation project(':terminalgrid')
     implementation project(':api')
     runtimeOnly project(':repeat')
+    runtimeOnly project(':notify')
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
