--- a/corecal/src/main/resources/bundle.properties
+++ b/corecal/src/main/resources/bundle.properties
@@ -12,6 +12,18 @@ selected-locale = "\nChanged to Given Locale"
 
 invalid-locale = \u001B[31mInput is not in the correct format or does not have an uppercase country code.\u001B[0m
 
+search-menu = Enter Keyword To Search
+
 exit-program = Exiting program.
 
 no-rows = No Events Available
+
+notify-today-events = Today's Events:
+
+notify-date = Event Date:
+
+notify-all-day = Event Is An All-Day Event
+
+notify-time = Event Start-Time:
+
+notify-duration = Event Duration:
