Search function implemented

--- a/corecal/src/main/resources/bundle.properties
+++ b/corecal/src/main/resources/bundle.properties
@@ -14,16 +14,22 @@ invalid-locale = \u001B[31mInput is not in the correct format or does not have a
 
 search-menu = Enter Keyword To Search
 
+search-found = Search Results Found Jumped To Event Date
+
+search-not-found = Search Results Not Found
+
 exit-program = Exiting program.
 
 no-rows = No Events Available
 
 notify-today-events = Today's Events:
 
-notify-date = Event Date:
+event-title = Event Title:
 
-notify-all-day = Event Is An All-Day Event
+event-date = Event Date:
 
-notify-time = Event Start-Time:
+event-all-day = Event Is An All-Day Event
 
-notify-duration = Event Duration:
+event-time = Event Start-Time:
+
+event-duration = Event Duration:
