--- a/corecal/build.gradle
+++ b/corecal/build.gradle
@@ -9,6 +9,7 @@ plugins {
     // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'pmd'
+    id 'com.intershop.gradle.javacc' version '4.0.1'
 }
 
 repositories {
@@ -53,6 +54,16 @@ pmd {
     rulesMinimumPriority = 5
     ruleSets = []
     ruleSetFiles = files('../saed-pmd-rules.xml')
+}
+
+javacc {
+    configs {
+        createmyparser {
+            inputFile = file('src/main/jj/Parser.jj')
+            packageName = 'edu.curtin.sec.assignment2'
+            //lookahead = '2'
+        }
+    }
 }
 
 //tasks.named('test') {
