german bundle added and search case-sensitive fix

--- a/corecal/src/main/resources/bundle.properties
+++ b/corecal/src/main/resources/bundle.properties
@@ -2,7 +2,7 @@ menu-prompt = Enter an option (+d, +w, +m, +y, -d, -w, -m, -y, t, s (search), q 
 
 invalid-option = Invalid option. Please enter a valid option.
 
-usage = \"+d\" to go forward (later) 1 day;\n\"+w\" to go forward 1 week;\n\"+m\" to go forward 1 month;\n\"+y\" to go forward 1 year;\n\"-d\" to go back (earlier) 1 day;\n\"-w\" to go back 1 week;\n\"-m\" to go back 1 month;\n\"-y\" to go back 1 year;\n\"t\" to return to today.\n\"s\" to search for events.\n\"q\" to exit the program.
+usage = \"+d\" to go forward (later) 1 day;\n\"+w\" to go forward 1 week;\n\"+m\" to go forward 1 month;\n\"+y\" to go forward 1 year;\n\"-d\" to go back (earlier) 1 day;\n\"-w\" to go back 1 week;\n\"-m\" to go back 1 month;\n\"-y\" to go back 1 year;\n\"t\" to return to today.\n\"s\" to search for events.\n\"l\" to change locale.\n\"q\" to exit the program.
 
 mins = mins
 
